manifests/frigate/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  selector:
    app: frigate
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8971
      protocol: TCP
      targetPort: http
    - name: http-services
      port: 5000
      protocol: TCP
      targetPort: http-services
    - name: rtsp
      port: 8554
      protocol: TCP
      targetPort: rtsp
    - name: webrtc-tcp
      protocol: TCP
      port: 8555
      targetPort: webrtc-tcp
    - name: webrtc-udp
      protocol: UDP
      port: 8555
      targetPort: webrtc-udp
