manifests/frigate/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  labels:
    gateway: private
spec:
  hostnames:
    - frigate.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: frigate
          port: 8971
