manifests/frigate/base/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      containers:
        - name: frigate
          image: "ghcr.io/blakeblackshear/frigate:stable"
          imagePullPolicy: Always
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8971
              protocol: TCP
            - name: http-services
              containerPort: 5000
              protocol: TCP
            - name: rtsp
              containerPort: 8554
              protocol: TCP
            - name: webrtc-tcp
              containerPort: 8555
              protocol: TCP
            - name: webrtc-udp
              containerPort: 8555
              protocol: UDP
            - name: webrtc-api-tcp
              containerPort: 1984
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http-services
              scheme: HTTP
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http-services
              scheme: HTTP
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
          volumeMounts:
            - name: configmap
              mountPath: /config/config.yml
              subPath: config.yml
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: dshm
              mountPath: /dev/shm
            - name: tmp
              mountPath: /tmp
            - mountPath: /dev/bus/usb
              name: usb-bus
              readOnly: false
            - mountPath: /dev/dri/renderD128
              name: dri-render
          resources: {}
      volumes:
        - name: configmap
          configMap:
            name: frigate
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-frigate-config
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-frigate-media
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        - name: usb-bus
          hostPath:
            path: /dev/bus/usb
            type: Directory
        - name: dri-render
          hostPath:
            path: /dev/dri/renderD128
            type: CharDevice

---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  selector:
    app: frigate
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8971
      protocol: TCP
      targetPort: http
    - name: http-services
      port: 5000
      protocol: TCP
      targetPort: http-services
    - name: rtsp
      port: 8554
      protocol: TCP
      targetPort: rtsp
    - name: webrtc-tcp
      protocol: TCP
      port: 8555
      targetPort: webrtc-tcp
    - name: webrtc-udp
      protocol: UDP
      port: 8555
      targetPort: webrtc-udp
    - name: webrtc-api-tcp
      protocol: TCP
      port: 1984
      targetPort: webrtc-api-tcp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  ingressClassName: nginx-private
  rules:
    - host: frigate.lan.stamx.nl
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frigate
                port:
                  name: http
    - host: frigate-webrtc-api.lan.stamx.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  name: webrtc-api-tcp
  tls:
    - hosts:
        - frigate.lan.stamx.nl
        - frigate-webrtc-api.lan.stamx.nl
      secretName: tls-wildcard-lan-stamx-nl

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-rewrite
  labels:
    app: frigate
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /stream.html?src=baby
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "frigate"
spec:
  ingressClassName: nginx-private
  rules:
    - host: camera.lan.stamx.nl
      http:
        paths:
          - path: /01
            pathType: ImplementationSpecific
            backend:
              service:
                name: frigate
                port:
                  name: webrtc-api-tcp
          - path: /video-stream.js
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  name: webrtc-api-tcp
          - path: /video-rtc.js
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  name: webrtc-api-tcp
          - path: /api/ws
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  name: webrtc-api-tcp
  tls:
    - hosts:
        - camera.lan.stamx.nl
      secretName: tls-wildcard-lan-stamx-nl
